# tkt-21027

./: README.md  nats-values.yaml
.github/workflows/: broadcaster.yaml  log-output.yaml  project.yaml  the-project.yaml  todo-backend.yaml
broadcaster/: Cargo.toml  Dockerfile
broadcaster/manifests/: deployment.yaml  kustomization.yaml  sealed-secret.yaml
broadcaster/src/: main.rs
cluster-resources/pv/: shared-pv.yaml
dyi_controller/: Cargo.toml  Dockerfile
dyi_controller/manifests/: crd.yaml  deployment.yaml  example-dummysite.yaml  rbac.yaml
dyi_controller/src/: crd.rs  error.rs  lib.rs  main.rs  reconciler.rs  resources.rs
log_output/: Cargo.toml  Dockerfile  Dockerfile.reader  Dockerfile.writer
log_output/greeter/: Cargo.toml  Dockerfile
log_output/greeter/manifests/: greeter.yaml  httproute.yaml
log_output/greeter/src/: main.rs
log_output/manifests/: argocd-app.yaml  configmap.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  log-output-mesh.yaml  service.yaml
log_output/src/: generator.rs  lib.rs  logger.rs  main.rs  reader.rs  runner.rs  server.rs  writer.rs
ping_pong/: Cargo.toml  Dockerfile
ping_pong/manifests/: analysis-template.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  migration-configmap.yaml  migration-job.yaml  postgres-statefulset.yaml  rollout.yaml  service.yaml
ping_pong/migrations/: 20251227_create_counter_table.sql
ping_pong/scripts/: init_db.sh
ping_pong/src/: lib.rs  main.rs
ping_pong/tests/: health_check.rs
project/: argocd-production.yaml  argocd-staging.yaml
project/base/: analysis-template.yaml  backendconfig.yaml  backup-cronjob.yaml  broadcaster-deployment.yaml  ingress.yaml  kustomization.yaml  migration-configmap.yaml  migration-job.yaml  postgres-statefulset.yaml  sealed-secret.yaml  the-project-configmap.yaml  the-project-rollout.yaml  todo-backend-deployment.yaml  todo-backend-service.yaml
project/overlays/production/: kustomization.yaml
project/overlays/staging/: broadcaster-patch.yaml  kustomization.yaml
the_project/: .gitignore  Cargo.toml  Dockerfile  README.md
the_project/.github/workflows/: main.yaml
the_project/cronjob/: Dockerfile  create-wiki-todo.sh
the_project/manifests/: analysis-template.yaml  argocd-app.yaml  backendconfig.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  rollout.yaml  service.yaml  wiki-todo-cronjob.yaml
the_project/src/: lib.rs  main.rs
todo_backend/: Cargo.toml  Dockerfile
todo_backend/manifests/: backendconfig.yaml  backup-cronjob.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  migration-configmap.yaml  migration-job.yaml  postgres-statefulset.yaml  service.yaml
todo_backend/migrations/: 20251227_create_todos_table.sql  20251229_add_done_field.sql
todo_backend/src/: lib.rs  main.rs
wikipedia_app/manifests/: wikipedia-pod.yaml
written_answers/: 3-9.md
