[package]
name = "broadcaster"
version = "0.0.1"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "broadcaster"

[dependencies]
async-nats = "0.38"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
