[package]
name = "dummysite-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
k8s-openapi = { version = "0.26.1", features = ["v1_31"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
reqwest = { version = "0.12.28", features = ["blocking"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
