[package]
name = "log-output"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "log-writer"
path = "src/writer.rs"

[[bin]]
name = "log-reader"
path = "src/reader.rs"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
reqwest = "0.12.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
uuid = { version = "1.19.0", features = ["v4"] }
