[package]
name = "ping-pong"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "ping_pong"

[[bin]]
path = "src/main.rs"
name = "ping-pong"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
