[package]
name = "the-project"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "the_project"

[[bin]]
path = "src/main.rs"
name = "the-project"

[dependencies]
actix-web = "4.12.1"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
actix-files = "0.6"
