[package]
name = "todo-backend"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "todo_backend"

[[bin]]
path = "src/main.rs"
name = "todo-backend"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
async-nats = "0.38"
